kubernetes/az-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworldjava
  namespace: labs
spec:
  type: ClusterIP
  ports:
  - port: 5000
  selector:
    app: helloworldjava
