kubernetes/rancher-service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworldjava-service
spec:
  ports:
  - port: 31005
    nodePort: 31005
    targetPort: java-port
    protocol: TCP
  selector:
    app: helloworldjava
  type: NodePort
