kubernetes/rancher-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: helloworldjava
  name: myjavalab
  namespace: labs
spec:
  rules:
  - host: myjavalab.labs.10.54.228.72.xip.io
    http:
      paths:
      - backend:
          serviceName: helloworldjava-service
          servicePort: java-port
        path: /
